--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ svg {
   flex: 0 0 31%;
   transition: transform 0.6s ease;
   margin: 1rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 14px rgb(0 0 0 / 20%);
   justify-self: center;
 }
 
@@ -173,6 +173,7 @@ h2 {
 @media screen and (max-width: 900px) {
   .slider .slider__card {
     flex: 0 0 45%;
+    margin: 1rem;
   }
 }
 @media screen and (max-width: 550px) {
